--- a/zadanie5_Sharaban.html
+++ b/zadanie5_Sharaban.html
@@ -17,7 +17,7 @@
                 function WinOpen_sharaban_4()
                     {window.open("obraz.html","okienko_g4","toolbar=no,directories=no,menubar=no,height=300,width=200,top=30,left=1260");}
                     
-                document.write("Wykonał prace: Sharaban Artur , numer w dzienniku 19, czyli mam układ [(19) mod 4=3] układ 4".fontcolor("red").fontsize(7).bold()+"<br><br><center>");
+                document.write("wykonał prace: Sharaban Artur , numer w dzienniku 19, czyli mam układ [(19) mod 4=3] układ 4".fontcolor("red").fontsize(7).bold()+"<br><br><center>");
             </script>
 
 <input type="button" value="grafika1" onclick="WinOpen_sharaban_1(' ')">
